test/negative/InterfaceNativeMethod.java
public interface InterfaceNativeMethod {
    public native f();
}
